# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("./scripts/build/ninja/vars.gni")

devtools_module_entrypoints = [
  "root.js",
  "RuntimeInstantiator.js",
  "accessibility/accessibility.js",
  "accessibility/accessibility-legacy.js",
  "animation/animation.js",
  "animation/animation-legacy.js",
  "bindings/bindings.js",
  "bindings/bindings-legacy.js",
  "browser_debugger/browser_debugger.js",
  "browser_debugger/browser_debugger-legacy.js",
  "browser_sdk/browser_sdk.js",
  "browser_sdk/browser_sdk-legacy.js",
  "changes/changes.js",
  "changes/changes-legacy.js",
  "cm/cm.js",
  "cm_headless/cm_headless.js",
  "cm_modes/cm_modes.js",
  "color_picker/color_picker.js",
  "color_picker/color_picker-legacy.js",
  "common/common-legacy.js",
  "components/components.js",
  "components/components-legacy.js",
  "console/console.js",
  "console/console-legacy.js",
  "console_counters/console_counters.js",
  "console_counters/console_counters-legacy.js",
  "cookie_table/cookie_table.js",
  "cookie_table/cookie_table-legacy.js",
  "coverage/coverage.js",
  "coverage/coverage-legacy.js",
  "css_overview/css_overview.js",
  "css_overview/css_overview-legacy.js",
  "data_grid/data_grid.js",
  "data_grid/data_grid-legacy.js",
  "devices/devices.js",
  "diff/diff.js",
  "diff/diff-legacy.js",
  "dom_extension/dom_extension.js",
  "elements/elements-legacy.js",
  "emulation/emulation.js",
  "emulation/emulation-legacy.js",
  "event_listeners/event_listeners.js",
  "event_listeners/event_listeners-legacy.js",
  "extensions/extensions.js",
  "extensions/extensions-legacy.js",
  "formatter/formatter.js",
  "formatter/formatter-legacy.js",
  "formatter_worker/formatter_worker-legacy.js",
  "har_importer/har_importer.js",
  "har_importer/har_importer-legacy.js",
  "heap_snapshot_model/heap_snapshot_model.js",
  "heap_snapshot_model/heap_snapshot_model-legacy.js",
  "heap_snapshot_worker/heap_snapshot_worker.js",
  "heap_snapshot_worker/heap_snapshot_worker-legacy.js",
  "help/help.js",
  "help/help-legacy.js",
  "host/host.js",
  "host/host-legacy.js",
  "inline_editor/inline_editor.js",
  "inline_editor/inline_editor-legacy.js",
  "input/input.js",
  "input/input-legacy.js",
  "inspector_main/inspector_main.js",
  "inspector_main/inspector_main-legacy.js",
  "issues/issues.js",
  "issues/issues-legacy.js",
  "developer_resources/developer_resources.js",
  "developer_resources/developer_resources-legacy.js",
  "javascript_metadata/javascript_metadata.js",
  "javascript_metadata/javascript_metadata-legacy.js",
  "js_main/js_main.js",
  "js_main/js_main-legacy.js",
  "layers/layers.js",
  "layers/layers-legacy.js",
  "layer_viewer/layer_viewer.js",
  "layer_viewer/layer_viewer-legacy.js",
  "lighthouse/lighthouse.js",
  "lighthouse/lighthouse-legacy.js",
  "marked/marked.js",
  "main/main.js",
  "main/main-legacy.js",
  "media/media.js",
  "media/media-legacy.js",
  "mobile_throttling/mobile_throttling.js",
  "mobile_throttling/mobile_throttling-legacy.js",
  "network/network.js",
  "network/network-legacy.js",
  "node_main/node_main.js",
  "node_main/node_main-legacy.js",
  "object_ui/object_ui.js",
  "object_ui/object_ui-legacy.js",
  "performance_monitor/performance_monitor.js",
  "performance_monitor/performance_monitor-legacy.js",
  "perf_ui/perf_ui.js",
  "perf_ui/perf_ui-legacy.js",
  "persistence/persistence.js",
  "persistence/persistence-legacy.js",
  "profiler/profiler.js",
  "profiler/profiler-legacy.js",
  "protocol_client/protocol_client.js",
  "protocol_client/protocol_client-legacy.js",
  "protocol_monitor/protocol_monitor.js",
  "protocol_monitor/protocol_monitor-legacy.js",
  "quick_open/quick_open.js",
  "quick_open/quick_open-legacy.js",
  "resources/resources.js",
  "resources/resources-legacy.js",
  "root/root.js",
  "root/root-legacy.js",
  "screencast/screencast.js",
  "screencast/screencast-legacy.js",
  "sdk/sdk-legacy.js",
  "search/search.js",
  "search/search-legacy.js",
  "security/security.js",
  "security/security-legacy.js",
  "services/services.js",
  "services/services-legacy.js",
  "settings/settings.js",
  "settings/settings-legacy.js",
  "snippets/snippets.js",
  "snippets/snippets-legacy.js",
  "source_frame/source_frame.js",
  "source_frame/source_frame-legacy.js",
  "sources/sources.js",
  "sources/sources-legacy.js",
  "test_runner/test_runner.js",
  "text_editor/text_editor.js",
  "text_editor/text_editor-legacy.js",
  "text_utils/text_utils.js",
  "text_utils/text_utils-legacy.js",
  "timeline/timeline.js",
  "timeline/timeline-legacy.js",
  "timeline_model/timeline_model.js",
  "timeline_model/timeline_model-legacy.js",
  "toolbox_bootstrap/toolbox_bootstrap.js",
  "ui/ui.js",
  "ui/ui-legacy.js",
  "wasmparser_worker/wasmparser_worker.js",
  "web_audio/web_audio.js",
  "web_audio/web_audio-legacy.js",
  "webauthn/webauthn.js",
  "webauthn/webauthn-legacy.js",
  "worker_main/worker_main.js",
  "worker_main/worker_main-legacy.js",
  "worker_service/worker_service.js",
  "workspace/workspace.js",
  "workspace/workspace-legacy.js",
  "workspace_diff/workspace_diff.js",
  "workspace_diff/workspace_diff-legacy.js",
]

front_end_devtools_module_entrypoints = []
generated_devtools_module_entrypoints = []

foreach(module, devtools_module_entrypoints) {
  front_end_devtools_module_entrypoints += [ "front_end/$module" ]
  generated_devtools_module_entrypoints += [ "$resources_out_dir/$module" ]
}

generated_typescript_entrypoints = [
  "$resources_out_dir/common/common.js",
  "$resources_out_dir/formatter_worker/formatter_worker.js",
  "$resources_out_dir/elements/elements.js",
  "$resources_out_dir/third_party/lit-html/lit-html.js",
  "$resources_out_dir/sdk/sdk.js",
  "$resources_out_dir/platform/platform.js",
]
